--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@types/react-dom": "^17.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^5.1.3",
+    "react-player": "^2.9.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
+    "use-debounce": "^7.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
