--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_BASE_URL = "https://google-search3.p.rapidapi.com/api/v1"
-REACT_APP_RAPIDAPI_KEY = "b2a88209cbmsh8c7480141184712p1f5259jsn960bf595e87b"
+REACT_APP_RAPIDAPI_KEY = "<please add your rapidapi key here>"
 REACT_APP_RAPIDAPI_HOST = "google-search3.p.rapidapi.com"
